# dineroIV

./: .travis.yml  CMakeLists.txt  README.md  binaryfmt.c  cmdargs.c  cmdargs.h  cmdd4.h  cmdmain.c  d4.h  dinfmt.c  misc.c  pixie64fmt.c  ref.c  tracein.c  tracein.h
src/: cmdargs.c  cmdargs.h  cmdmain.c  d4.h  pixie32fmt.c
src/simulator/: binaryfmt.c  cmdargs.c  cmdargs.h  cmdd4.h  cmdmain.c  d4.h  dinfmt.c  misc.c  pixie32fmt.c  pixie64fmt.c  ref.c  result.c  result.h  tracein.c  tracein.h  xdinfmt.c
src/tool/: p2b.c  p2d.c
testing/: mm.32.good.i8d8b64S16fsP50  mm.32.good.i8d8b64S16fsP50D  mm.32.good.i8d8b64S16fsP50b  mm.32.good.i8d8b64S16fsP50p  mm.32.good.u8b16a4rr  mm.32.good.u8b16a4rrc  mm.64.good.i8d8b64S16fsP50P  mm.64.good.i8d8b64S16fsP50cP  p2d.c  testscript
testing/ref/: mm.32.good.u8b16a512rr  mm.64.good.i8d8b64S16fsP50cP
